Fixing TOS text on mobile and reducing the shadow opacity.

--- a/assets/sass/register.sass
+++ b/assets/sass/register.sass
@@ -10,51 +10,20 @@
 
 .tos
 	position: absolute
-	bottom: 50px
-	left: 33px
-	font-size: 0.8em
-	color: #AA99B1
+	// bottom: 50px
+	// left: 33px
+
+	margin-top: 10px
+	left: 25px
+	width: 300px
+
+	p
+		font-size: 0.75em
+		color: #AA99B1
+		text-align: center
 
 	@media screen and (max-width: 480px)
-		position: absolute
-		top: 500px
-		left: 10px
-		font-size: 0.74em
-		color: #AA99B1
-
-	@media screen and (min-height: 640px)
-		position: absolute
-		bottom: 60px
-		left: 0
-		font-size: 0.74em
-		color: #AA99B1
-
-	@media screen and (min-height: 700px)
-		position: absolute
-		bottom: 130px
-		left: 0
-		font-size: 0.74em
-		color: #AA99B1
-
-.tosExtra
-	position: absolute
-	left: 55px
-	top: 15px
-
-	@media screen and (max-width: 480px)
-		position: absolute
-		left: 50px
-		top: 15px
-
-	@media screen and (min-height: 640px)
-		position: absolute
-		left: 50px
-		top: 15px
-
-	@media screen and (min-height: 700px)
-		position: absolute
-		left: 50px
-		top: 15px
+		left: 0px
 
 .text
 	position: absolute
@@ -76,7 +45,7 @@
 	right: 0
 	bottom: 0
 	margin: auto
-	box-shadow: 0 0 10px black
+	box-shadow: 0 0 10px rgba(0,0,0,0.30)
 
 	@media screen and (max-width: 480px)
 		width: 300px
@@ -95,6 +64,7 @@ fieldset
 .input
 	box-sizing: border-box
 	padding: 5px
+	padding-left: 10px
 	display: block
 	margin: 0 0 10px 50px
 	width: 300px
